commit trước hội đồng

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 db_uri=mssql+pyodbc://sa:N19dccn112@MY:1433/WEBBANCATN?driver=ODBC+Driver+17+for+SQL+Server
 excel_file=C:/Users/myngu/Downloads/data.xlsx
 excel_file_knn=C:/Users/myngu/Downloads/data_knn.xlsx
+excel_input_predict=C:/Users/myngu/Downloads/input_predict.pkl
